# Time-LLM

./: .gitignore  UV_GUIDE.md  analysis.py  check_shape.py  preprocess.py  pyproject.toml  requirements.txt  run_m4.py  run_main.py  run_simple.py  split_kpi_data.py  test_env.py  test_result.py  testdata.py
data_provider/: data_factory.py  data_loader.py
eda/: eda.ipynb  eda_electricity.py  run_eda.py
layers/: AutoCorrelation.py  Autoformer_EncDec.py  Conv_Blocks.py  Embed.py  SelfAttention_Family.py  StandardNorm.py  Transformer_EncDec.py  __init__.py
models/: TimeLLM.py
notebooks/: train_weather_colab.ipynb
prepare_data/data_provider/: __init__.py  data_factory.py  data_loader.py
prepare_data/data_provider_pretrain/: data_factory.py
run/: run.md  run_custom.py  run_fast.py  run_m4.py  run_main.py  run_pretrain.py
scripts/: kpi.sh  run_ETTh1_single_gpu_demo.sh  scripts.md
scripts/fast_scripts/: TimeLLM_ECL_1.txt  TimeLLM_ECL_2.txt  TimeLLM_ECL_3.txt  TimeLLM_ECL_4.txt
scripts/multi_gpu/: TimeLLM_ECL.sh  TimeLLM_ECL.txt  TimeLLM_ETTh1.sh  TimeLLM_ETTh1.txt  TimeLLM_ETTh1_ETTh2.sh  TimeLLM_ETTh1_ETTh2.txt  TimeLLM_ETTh2.sh  TimeLLM_ETTh2.txt  TimeLLM_ETTm1.sh  TimeLLM_ETTm1.txt  TimeLLM_ETTm2.sh  TimeLLM_ETTm2.txt  TimeLLM_M4.sh  TimeLLM_M4.txt  TimeLLM_Traffic.sh  TimeLLM_Traffic.txt  TimeLLM_Weather.sh  TimeLLM_Weather.txt
scripts/single_gpu/: NetworksKPI.txt  TimeLLM_ECL.sh  TimeLLM_ECL.txt  TimeLLM_ECL_No_Hangup.txt  (+21 more)
utils/: check_results.py  m4_summary.py  network_preprocess.py  testgpu.py  tools.py  visualize.py  visualize_KPI_result.py
